--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Redirecting...</title>
-    <meta http-equiv="refresh" content="10; URL='https://nzdimensionz.com'" />
+    <meta http-equiv="refresh" content="10; URL='https://nzdimensionz.com/sticky-kiwi-nzdim/'" />
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -58,7 +58,7 @@
         <img src="your-logo.png" alt="Logo" class="logo">
         <h1>You are being redirected to our wholesale site</h1>
         <p>You will be redirected in <span class="countdown" id="timer">5</span> seconds.</p>
-        <p class="message">If you are not redirected automatically, click <a href="https://nzdimensionz.com/">here</a>.</p>
+        <p class="message">If you are not redirected automatically, click <a href="https://nzdimensionz.com/sticky-kiwi-nzdim/">here</a>.</p>
     </div>
 
     <script>
